# services/user-service/src/main/kotlin/com/example/foodike/user/api/dto/AuthDtos.kt
@@ -20,6 +20,11 @@ data class GoogleAuthRequest(
 )
 
 @Serializable
+data class SsoAuthRequest(
+    val idToken: String,
+)
+
+@Serializable
 data class RefreshTokenRequest(
     val refreshToken: String,
 )
